Fixed UI mobile menu cutoff bug

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   height: 100vh;
   /* background: #f1f1f1; */ 
+  /* overflow: hidden; */
 }
 
 .visuallyhidden {
@@ -86,9 +87,11 @@ body {
 }
 
 .nav__list {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow-y: auto;
 }
 
 .nav__list-item {
@@ -488,12 +491,13 @@ input::-webkit-inner-spin-button {
     text-align: center;
     transition: 0.3s;
     box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-    overflow: hidden;
-    
+    overflow-y: auto;
+    max-height: calc(100% - 4rem);
   }
 
   .nav__list.active {
     left: 0;
+    
   }
 
   .nav__list-item {
